--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,13 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    buildTypes.each {
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file("token.properties").newDataInputStream())
+        def tokenAuth = properties.getProperty("TOKEN_GENIUS", "")
+        it.buildConfigField "String", "TOKEN_GENIUS", tokenAuth
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -30,6 +37,9 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+    buildFeatures {
+        viewBinding true
     }
 }
 
@@ -60,4 +70,9 @@ dependencies {
     //Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
+
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 }
