--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,7 +72,11 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
 
-
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+
+    //Paging 3
+    def paging_version = "3.1.1"
+
+    implementation "androidx.paging:paging-runtime:$paging_version"
 }
