--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,12 @@ dependencies {
 
     //Paging 3
     def paging_version = "3.1.1"
-
     implementation "androidx.paging:paging-runtime:$paging_version"
+
+    /*Moshi*/
+    def moshiVersion = "1.9.1"
+    implementation("com.squareup.moshi:moshi:$moshiVersion")
+    kapt("com.squareup.moshi:moshi-kotlin-codegen:$moshiVersion")
+    implementation("com.squareup.retrofit2:converter-moshi:2.9.0")
+    implementation "com.squareup.moshi:moshi-kotlin:$moshiVersion"
 }
