--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,7 @@ dependencies {
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
     //Paging 3
     def paging_version = "3.1.1"
@@ -92,4 +93,8 @@ dependencies {
     kapt("com.squareup.moshi:moshi-kotlin-codegen:$moshiVersion")
     implementation("com.squareup.retrofit2:converter-moshi:2.9.0")
     implementation "com.squareup.moshi:moshi-kotlin:$moshiVersion"
+
+    //Palette
+    implementation 'androidx.palette:palette-ktx:1.0.0'
+
 }
