--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,9 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+        freeCompilerArgs += [
+                '-Xjvm-default=enable'
+        ]
     }
     buildFeatures {
         viewBinding true
@@ -96,5 +99,9 @@ dependencies {
 
     //Palette
     implementation 'androidx.palette:palette-ktx:1.0.0'
+
+    //Dagger 2
+    implementation 'com.google.dagger:dagger:2.40'
+    kapt 'com.google.dagger:dagger-compiler:2.40'
 
 }
