--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,5 +104,6 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.40'
     kapt 'com.google.dagger:dagger-compiler:2.40'
 
+    //Cicerone
     implementation 'com.github.terrakok:cicerone:7.1'
 }
